<resources>
    <string name="something_went_wrong">Something went wrong</string>
    <string name="email_address">Email address</string>
    <string name="login">Login</string>
    <string name="sign_in">Sign In</string>
    <string name="wrong_email">Wrong email</string>
    <string name="wrong_password">Wrong password</string>
    <string name="need_confirm_email">Before you login and begin working with the application, please confirm your email address by following instruction, that was sent on your email</string>
    <string name="password_does_not_match">Password does not match</string>
    <string name="password_is_too_short">Password is too short</string>
    <string name="new_password_was_sent">New password was sent on your email</string>
    <string name="password">Password</string>
    <string name="ok">OK</string>
    <string name="confirmed">Confirmed</string>
    <string name="retry">Retry</string>
    <string name="email">Email</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="reset_password">Reset Password</string>
    <string name="create_new_account">Create New Account</string>
    <string name="logo">Logo</string>
    <string name="back">Back</string>
    <string name="profile">Profile</string>
    <string name="apps">Apps</string>
    <string name="news">News</string>
    <string name="feedbacks">Feedbacks</string>
    <string name="info">Info</string>
    <string name="news_image">News image</string>
    <string name="make_sure_internet_is_turned_on">Make sure Wi-Fi or cellular data is turned on</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="confirm_password">Confirm password</string>
    <string name="cancel">Cancel</string>
    <string name="register">Register</string>
    <string name="registration_form">Registration Form</string>
    <string name="reset">Reset</string>
    <string name="logout">Logout</string>
    <string name="google_play">Google play</string>
    <string name="description">Description</string>
    <string name="tags">Tags</string>
    <string name="development_time">Development time</string>
    <string name="avatar">Avatar</string>
    <string name="upwork">upWork</string>
    <string name="linkedin">LinkedIn</string>
    <string name="resume">Resume</string>
    <string name="save">Save</string>
    <string name="user_updated">User updated</string>
    <string name="you_are_not_login_yet">You are not login yet</string>
    <string name="comment">Comment…</string>
    <string name="add_feedback">Add feedback</string>
    <string name="github">GitHub</string>
</resources>