<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="viewModel"
            type="com.iwelogic.presentation.sign_in.forgot_password.ForgotPasswordViewModel" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/background"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:layout_width="@dimen/toolbar"
                android:layout_height="@dimen/toolbar"
                android:background="?attr/actionBarItemBackground"
                android:contentDescription="@string/back"
                android:onClick="@{() -> viewModel.onClickClose()}"
                android:scaleType="centerInside"
                android:src="@drawable/back" />

            <TextView
                style="@style/Header"
                android:layout_width="match_parent"
                android:layout_height="@dimen/toolbar"
                android:layout_marginEnd="@dimen/toolbar"
                android:text="@string/reset_password" />

        </LinearLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.core.widget.NestedScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:clipToPadding="false"
                android:fillViewport="true"
                android:overScrollMode="never">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center_horizontal"
                    android:orientation="vertical"
                    android:padding="@dimen/default_size">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/email"
                        android:textSize="14sp" />

                    <androidx.appcompat.widget.AppCompatEditText
                        style="@style/EditField"
                        android:background="@{viewModel.emailError == null ? @drawable/background_edit_field : @drawable/background_edit_field_error}"
                        android:contentDescription="@string/email_address"
                        android:inputType="textEmailAddress"
                        android:text="@={viewModel.email}" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:minHeight="@dimen/default_size"
                        android:text="@{viewModel.emailError}"
                        android:textColor="@color/error" />

                    <androidx.legacy.widget.Space
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="1" />

                    <Button
                        style="@style/Button"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:onClick="@{() -> viewModel.onClickRemember()}"
                        android:text="@string/reset" />

                </LinearLayout>

            </androidx.core.widget.NestedScrollView>

            <include
                layout="@layout/layout_progress"
                app:progress="@{viewModel.progress}" />

        </FrameLayout>

    </LinearLayout>

</layout>
