<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <data>

        <variable
            name="viewModel"
            type="com.iwelogic.presentation.ui.main.feedbacks.feedback.AddFeedbackViewModel" />
    </data>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="@dimen/default_size"
            android:background="@drawable/background_dialog"
            android:orientation="vertical"
            android:padding="@dimen/default_size"
            tools:ignore="UselessParent">

            <TextView
                style="@style/Header"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/add_feedback" />

            <RatingBar
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/default_size"
                android:max="5"
                android:numStars="5"
                android:rating="@={viewModel.feedback.rating}"
                android:stepSize="1"
                android:theme="@style/RatingBar"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/default_size"
                android:background="@drawable/background_edit_field"
                android:gravity="top"
                android:minLines="5"
                android:hint="@string/comment"
                android:padding="@dimen/half_default_size"
                android:text="@={viewModel.feedback.text}"
                android:importantForAutofill="no"
                tools:ignore="TextFields" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:layout_marginTop="@dimen/default_size"
                android:gravity="end">

                <TextView
                    android:id="@+id/btnCancel"
                    android:layout_width="wrap_content"
                    android:layout_height="50dp"
                    android:layout_gravity="end"
                    android:background="?attr/actionBarItemBackground"
                    android:fontFamily="@font/open_sans_bold"
                    android:gravity="center"
                    android:minWidth="80dp"
                    android:onClick="@{() -> viewModel.onClickClose()}"
                    android:paddingStart="@dimen/default_size"
                    android:paddingEnd="@dimen/default_size"
                    android:text="@string/cancel"
                    android:textColor="@color/button"
                    android:textSize="15sp" />

                <TextView
                    android:id="@+id/btnOk"
                    android:layout_width="wrap_content"
                    android:layout_height="50dp"
                    android:layout_gravity="end"
                    android:background="?attr/actionBarItemBackground"
                    android:fontFamily="@font/open_sans_bold"
                    android:gravity="center"
                    android:minWidth="80dp"
                    android:onClick="@{() -> viewModel.onClickOk()}"
                    android:paddingStart="@dimen/default_size"
                    android:paddingEnd="@dimen/default_size"
                    android:text="@string/ok"
                    android:textColor="@color/button"
                    android:textSize="15sp" />

            </LinearLayout>

        </LinearLayout>

    </FrameLayout>
</layout>
